<resources>
    <string name="app_name">top1</string>

    <string name="best_fitness_tracker">ВОЗМОЖНО, ЛУЧШИЙ ФИТНЕС \nТРЕКЕР ДВФУ</string>
    <string name="created_by">Созданный студентом\n 2-ого курса </string>
    <string name="register">Зарегистрироваться</string>
    <string name="have_an_account">Уже есть аккаунт?</string>

    <string name="text_login">логин</string>
    <string name="text_password">пароль</string>
    <string name="text_repeat_password">повторите пароль</string>
    <string name="text_nickname">имя или никнейм</string>
    <string name="text_sex">пол</string>
    <string name="continue_">продолжить</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="already_have_acc">Уже есть аккаунт?</string>
    <string name="button">Button</string>
    <string name="hello_blank_fragment">hello blank fragmebt\n</string>

    <string name="user_activity">Активность пользователей</string>
    <string name="when_was">Как давно</string>
    <string name="name_activity">Имя активности</string>
    <string name="how_long">Продолжительность</string>
    <string name="distance">Дистанция</string>
    <string name="user_name">Имя пользователя</string>
    <string name="activity_name">Имя активности</string>
    <string name="start">Старт</string>
    <string name="finish">Финиш</string>
    <string name="comment">Комментарий</string>
    <string name="my_username">\@adxbana</string>

</resources>