<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="420dp"
        android:layout_height="733dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="73dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="7dp"
                    android:src="@drawable/arrow_back" />

                <TextView
                    android:id="@+id/registrationTextView"
                    android:layout_width="200dp"
                    android:layout_height="53dp"
                    android:text="@string/registration"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="77dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LoginEditText"
                        android:layout_width="409dp"
                        android:layout_height="61dp"
                        android:hint="@string/text_login" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="409dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordRepeatEditText"
                        android:layout_width="409dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_repeat_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="409dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_nickname" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="71dp" />

            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4C08FD"
                android:backgroundTint="#443283"
                android:gravity="center_vertical"
                android:text="@string/continue_"
                android:textColor="#FCFDFA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.122" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="324dp"
                android:layout_height="99dp"
                android:layout_marginTop="80dp"
                android:text="Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а так же принимаете пользовательское соглашение"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>